--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "dustris"
+name = "sandtris"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+rand = "0.9.2"
 raylib = "5.5.1"
